--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,13 @@ section {
 
 .ssb-post img {
   max-width: 100%;
+  width: 640px;
+  background-color: #eee;
+}
+
+img.ssb-emoji {
+  width: 1em;
+  height: 1em;
 }
 
 .nav-bar {
