Move publish button to the right
since it is an action

--- a/static/styles.css
+++ b/static/styles.css
@@ -114,6 +114,11 @@ pre {
   padding: 0 .5ex .5ex 0;
 }
 
+.composer-actions {
+  text-align: right;
+  padding: .2ex .5ex;
+}
+
 td {
   vertical-align: top;
 }
