--- a/static/styles.css
+++ b/static/styles.css
@@ -12,8 +12,22 @@ section {
   font-family: Symbola;
 }
 
-.ssb-post img {
+.ssb-post img,
+.ssb-issue img {
   max-width: 100%;
+  max-height: 500px;
+}
+
+.ssb-post blockquote {
+  border-left: 4px #e0e0e0 solid;
+  color: #444;
+  background-color: #f9f9f9;
+  padding: .2rem .2rem .2rem 1rem;
+  margin: .5rem 0;
+}
+
+.ssb-post-text {
+  word-break: break-word;
 }
 
 img.ssb-emoji {
