--- a/static/styles.css
+++ b/static/styles.css
@@ -184,6 +184,12 @@ table.ssb-object td {
   border: 1px solid black;
 }
 
+.chess-square {
+  width: 1em;
+  height: 1em;
+  text-align: center;
+}
+
 .chess-square-dark {
   background-color: #ccc;
 }
